たくさんのview作った

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Karaoke2</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_suggestion">SuggestionActivity</string>
+    <string name="title_activity_search_want_music">SearchWantMusicActivity</string>
+    <string name="title_activity_search_sang_music">SearchSangMusicActivity</string>
 </resources>
