--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="title_activity_search_want_music">SearchWantMusicActivity</string>
     <string name="title_activity_search_sang_music">SearchSangMusicActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
+    <string name="title_activity_initial_use">InitialUseActivity</string>
 </resources>
