--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Karaoke2</string>
+    <string name="app_name">Music Recommender</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_suggestion">SuggestionActivity</string>
     <string name="title_activity_search_want_music">SearchWantMusicActivity</string>
