--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_initial_use">InitialUseActivity</string>
 
+    <!-- toolbar titles -->
+    <string name="title__register__format__artist">アーティスト(%1$s)</string>
+    <string name="title__register__format__music">曲名(%1$s)</string>
+
     <!-- hints -->
 
     <string name="hint_artist_name">アーティスト名</string>
@@ -27,6 +31,10 @@
     <string name="text_register">登録</string>
     <string name="text_search">検索</string>
     <string name="text_enter_room">ルーム入室</string>
+
+    <string name="text__register__tap_a_music">登録する曲をタップしてください</string>
+    <string name="text__register__tap_a_music_with_popular_order">登録する曲をタップしてください\ \ 人気順に変換中&#8230;</string>
+    <string name="text__register__register_done">登録しました</string>
 
     <!-- format -->
 
