strings.xmlにまとめる

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,28 @@
     <string name="title_activity_search_sang_music">SearchSangMusicActivity</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="title_activity_initial_use">InitialUseActivity</string>
+
+    <!--hint-->
+    <string name="hint_user_name">ユーザ名</string>
+    <string name="hint_room_name">ルーム名</string>
+    <string name="hint_artist_name">アーティスト名</string>
+    <string name="hint_song_name">曲名</string>
+
+    <!--common text-->
+    <string name="text_register">登録</string>
+    <string name="text_create_room">ルーム作成</string>
+    <string name="text_enter_room">ルーム入室</string>
+    <string name="text_tap_song_searching">登録する曲をタップしてください  検索中・・・</string>
+    <string name="text_tap_song_changing">登録する曲をタップしてください  人気順に変換中・・・</string>
+    <string name="text_tap_song">登録する曲をタップしてください</string>
+    <string name="text_search">検索</string>
+
+    <!--title-->
+    <string name="title_register">登録画面</string>
+    <string name="title_song_register">歌った曲を登録</string>
+
+    <!--toast text-->
+    <string name="toast_no_room">そのルームはありません</string>
+    <string name="toast_already_room">すでにそのルームはあります</string>
+    <string name="toast_register">登録しました</string>
 </resources>
